# Pinkeye

./: .dockerignore  .gitignore  IMPLEMENTATION_REPORT.md  README.md  list.md  refined_implementation_plan.md
agent-runtime/: pyproject.toml
agent-runtime/runtime/: agent.py  egress.py  exploit.py  msf.py  orchestrator.py  pipeline.py  registry.py  sandbox.py  subagents.py  toolset.py
agent-runtime/runtime/llm/: base.py  claude.py  config.py  fake.py  ollama.py  openai_compat.py  refusal.py
agent-runtime/runtime/mcp/: __init__.py  backend.py  client.py  config.py  pool.py  session.py
agent-runtime/runtime/normalize/: common.py  ffuf.py  hydra.py  nikto.py  nmap.py  nuclei.py  sast.py  zap.py
agent-runtime/tests/: test_agent.py  test_credential.py  test_dast_normalize.py  test_egress.py  test_events.py  test_exploit.py  test_intel.py  test_llm_config.py  test_mcp.py  test_mcp_live_snyk.py  test_mcp_pool.py  test_nmap_normalize.py  test_orchestrator.py  test_refusal.py  test_reputation.py  test_sast_normalize.py  test_subagents.py  test_toolset_select.py  test_zap.py
control-plane/: pyproject.toml
control-plane/app/: attack.py  audit.py  auth.py  config.py  correlation.py  cve_db.py  cve_seed.py  events.py  graph.py  main.py  memory.py  query.py  queue.py  repositories.py  scope.py  secrets.py  store.py  uploads.py  validation.py  worker.py
control-plane/tests/: test_correlation.py  test_events_store.py  test_hardening.py  test_memory.py  test_query.py  test_sast_upload_endpoint.py  test_scope.py  test_scoring.py  test_tenancy.py  test_uploads.py
(+43 files in other folders)
