[project]
name = "eye-control-plane"
version = "0.1.0"
description = "Codename Eye control plane: scope guard, audit log, run orchestration, graph writes."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "neo4j>=5.19",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Ship data files (migrations, CVE seed) inside the wheel so they're found when pip-installed.
[tool.setuptools.package-data]
"app.db" = ["migrations/*.sql"]
"app.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
